<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/plenoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaPlenoFragment">

    <EditText
        android:id="@+id/etNomePleno"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataNascPleno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataNascPleno"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/dataNasc"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etBairroPleno"
        app:layout_constraintStart_toStartOf="@+id/etNomePleno"
        app:layout_constraintTop_toBottomOf="@+id/etNomePleno" />

    <EditText
        android:id="@+id/etBairroPleno"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etAcademiaPleno"
        app:layout_constraintStart_toStartOf="@+id/etDataNascPleno"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascPleno" />

    <EditText
        android:id="@+id/etAcademiaPleno"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/academia"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etRecordePleno"
        app:layout_constraintStart_toStartOf="@+id/etBairroPleno"
        app:layout_constraintTop_toBottomOf="@+id/etBairroPleno" />

    <EditText
        android:id="@+id/etRecordePleno"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="57dp"
        android:ems="10"
        android:hint="@string/recorde"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarPleno"
        app:layout_constraintStart_toStartOf="@+id/etAcademiaPleno"
        app:layout_constraintTop_toBottomOf="@+id/etAcademiaPleno" />

    <Button
        android:id="@+id/btnCadastrarPleno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:text="@string/cadastrar"
        app:layout_constraintStart_toStartOf="@+id/etRecordePleno"
        app:layout_constraintTop_toBottomOf="@+id/etRecordePleno" />

</androidx.constraintlayout.widget.ConstraintLayout>